--- a/_data/oias.yml
+++ b/_data/oias.yml
@@ -1,3 +1,12 @@
+- title: Kainga Ora review request filed by Instagram
+  url: https://www.instagram.com/p/C8320EEJP1D/
+  added: 2025-02-24
+  description: |
+    This request was filed via Instagram and received some coverage from <a href="https://newsroom.co.nz/2024/06/18/40-year-old-official-information-laws-fare-well-on-social-media">Newsroom</a>.
+    While social media isn't the most ideal avenue for filing an OIA, it is still a valid one. The Ombudsman once
+    <a href="https://www.ombudsman.parliament.nz/sites/default/files/2022-02/Request%20made%20via%20Twitter.pdf">issued a ruling</a>
+    that a tweet is a valid medium for request.
+
 - title: Requesting complete list of self-help management books prescribed to ministers and public department heads by Prime Minister Christopher Luxon
   url: https://fyi.org.nz/request/26981-requesting-complete-list-of-self-help-management-books-prescribed-to-ministers-and-public-department-heads-by-prime-minister-christopher-luxon
   added: 2025-02-02
