--- a/_data.yml
+++ b/_data.yml
@@ -6,3 +6,11 @@ metas:
   icon: /favicon.png
   lang: en
   generator: true
+
+jsonLd:
+  "@type": WebSite
+  url: /
+  name: utf9k
+  author:
+    "@type": Person
+    name: Marcus Crane
