Remove duplicate description
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data.yml
+++ b/_data.yml
@@ -11,6 +11,7 @@ jsonLd:
   "@type": WebSite
   url: /
   name: utf9k
+  description: =description
   author:
     "@type": Person
     name: Marcus Crane
