--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "npm:preact",
+    "jsxImportSource": "lume",
     "types": [
       "lume/types.ts"
     ]
@@ -17,7 +17,7 @@
     "sync": "./ci/externalsync.sh"
   },
   "imports": {
-    "lume/": "https://deno.land/x/lume@v2.5.2/",
+    "lume/": "https://deno.land/x/lume@v3.0.1/",
     "prettier": "npm:prettier@3.0.0",
     "rehype-pretty-code": "npm:rehype-pretty-code@0.11.0",
     "remark-callout": "npm:@r4ai/remark-callout@0.6.2",
@@ -25,6 +25,15 @@
     "hast-util-from-html-isomorphic": "npm:hast-util-from-html-isomorphic@2.0.0",
     "remark-toc": "npm:remark-toc@9.0.0",
     "rehype-slug": "npm:rehype-slug@6.0.0",
-    "rehypeAutolinkHeadings": "npm:rehype-autolink-headings@7.1.0"
+    "rehypeAutolinkHeadings": "npm:rehype-autolink-headings@7.1.0",
+    "lume/jsx-runtime": "https://deno.land/x/ssx@v0.1.9/jsx-runtime.ts"
+  },
+  "unstable": [
+    "temporal"
+  ],
+  "lint": {
+    "plugins": [
+      "https://deno.land/x/lume@v3.0.1/lint.ts"
+    ]
   }
 }
