Added a few more OSTs
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/osts.yml
+++ b/_data/osts.yml
@@ -142,6 +142,30 @@
   cover: https://i.scdn.co/image/ab67616d0000b2733428635933192747e1287acc
   release_date: '2010-02-02'
   total_tracks: 11
+- id: 50Z0YnF0w6lUhF7ZMCPnbc
+  title: BAYONETTA Original Soundtrack (Vol. 1)
+  artist: BAYONETTA
+  cover: https://i.scdn.co/image/ab67616d0000b273044d0f5b190c98fe112e31fc
+  release_date: '2009-11-04'
+  total_tracks: 37
+- id: 2q1zN8Zt8dEmhfAaETVFoS
+  title: BAYONETTA Original Soundtrack (Vol. 2)
+  artist: BAYONETTA
+  cover: https://i.scdn.co/image/ab67616d0000b273c66e2a52b1bc9d390d1a4a76
+  release_date: '2009-11-04'
+  total_tracks: 26
+- id: 0gbCEGCVlc1LYWTUw7eHhh
+  title: BAYONETTA Original Soundtrack (Vol. 3)
+  artist: BAYONETTA
+  cover: https://i.scdn.co/image/ab67616d0000b2735937e852f0c7935feb612a2d
+  release_date: '2009-11-04'
+  total_tracks: 33
+- id: 6DAbce56rNosXRjPbcMW9O
+  title: BAYONETTA Original Soundtrack (Vol. 4)
+  artist: BAYONETTA
+  cover: https://i.scdn.co/image/ab67616d0000b2734972f013c77fc5af4a27bcc4
+  release_date: '2009-11-04'
+  total_tracks: 23
 - id: 5wsMaD5GwKydj5fX2SBTOR
   title: BAYONETTA Original Soundtrack (Vol. 5)
   artist: BAYONETTA
@@ -154,6 +178,13 @@
   cover: https://i.scdn.co/image/ab67616d0000b27320c89e8aee86e2abce39d37d
   release_date: '2013-08-14'
   total_tracks: 104
+- id: 5nf5ABw42byofYV4vZ4Y1S
+  title: Billy Hatcher and the Giant Egg Original Soundtrack ”Music Popped Out of
+    The Egg”
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b27383ddef96faed8cdb58383495
+  release_date: '2003-11-06'
+  total_tracks: 28
 - id: 1muCc0xAE42hkbwhnu4ALc
   title: Black Mesa Soundtrack
   artist: Joel Nielsen
@@ -178,12 +209,6 @@
   cover: https://i.scdn.co/image/ab67616d0000b2738aed7eb5ac54580da41bdca6
   release_date: '2009-08-04'
   total_tracks: 41
-- id: 1XoE7ZirQ3gjxq8HIzTJU9
-  title: COWBOY BEBOP (Original Motion Picture Soundtrack)
-  artist: SEATBELTS
-  cover: https://i.scdn.co/image/ab67616d0000b273e90a54d6e31d9ff3f1d566fa
-  release_date: '1998-05-21'
-  total_tracks: 17
 - id: 3jQ7eqotwovipeZ3j3rMqu
   title: Cuphead (Original Soundtrack)
   artist: Kristofer Maddigan
@@ -310,6 +335,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b273a22122dde8f636cc21cad3b5
   release_date: '2024-11-14'
   total_tracks: 36
+- id: 6C3fhpeRf1gTBjS6PHM52X
+  title: END OF ETERNITY ORIGINAL SOUNDTRACK (Vol. 1)
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273c02b4d67fb98c6eb36aa0c55
+  release_date: '2010-03-24'
+  total_tracks: 23
 - id: 3oVyCVU76IRV2h3fQFIm1S
   title: 'ENDWALKER: FINAL FANTASY XIV Original Soundtrack'
   artist: 祖堅 正慶
@@ -436,6 +467,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b2732f0f0877a0d7301a716fb9c2
   release_date: '1987'
   total_tracks: 181
+- id: 1GVSU0WZu7QUUPUkxPGelM
+  title: FOR Brighter DAY Phantasy Star Universe Original Sound Track
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273a4666f9b87991624bcf3553a
+  release_date: '2006-10-12'
+  total_tracks: 69
 - id: 1NCt4W6d8fNGkBQAjXDVrA
   title: Furi (Original Game Soundtrack)
   artist: Various Artists
@@ -574,6 +611,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b273b946eae76e591951164217da
   release_date: '2012-10-03'
   total_tracks: 20
+- id: 6X6DxlTL1BB50VLvEzRD7h
+  title: Jet Set Radio SEGA Original Tracks
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273d80af40b8062a9d0eaf671dd
+  release_date: '2012-10-03'
+  total_tracks: 15
 - id: 7KHPyc1crwPfCZekggfw77
   title: Katamari Damacy (Original Soundtrack) -Katamari Fortissimo Damacy
   artist: 塊魂 シリーズ SOUND TEAM
@@ -604,6 +647,18 @@
   cover: https://i.scdn.co/image/ab67616d0000b273fbceb1358412f67d1b563a0d
   release_date: '2022-12-21'
   total_tracks: 70
+- id: 7DEXskff0xQFFwH6kTRKWv
+  title: LIKE A DRAGON 8 ORIGINAL SOUNDTRACK
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273af59b2b54c8b9568ae64978b
+  release_date: '2024-03-06'
+  total_tracks: 151
+- id: 0Ut5nt09qUJ3V9EdefN3Ry
+  title: LIKE A DRAGON GAIDEN The Man Who Erased His Name
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2731cea19dec9d08689d8d490cf
+  release_date: '2023-12-06'
+  total_tracks: 64
 - id: 2viinzlDkAeC3KprABzu4M
   title: LocoRoco Original Soundtrack
   artist: SIE Sound Team
@@ -706,18 +761,6 @@
   cover: https://i.scdn.co/image/ab67616d0000b27377ee9e2be5e1ba80106cfe53
   release_date: '2016-07-22'
   total_tracks: 32
-- id: 09pQYJgOI2BwCQPxYk0SzE
-  title: MOBILE SUIT GUNDAM 0083 Stardust Memory Original Motion Picture Soundtrack
-  artist: Mitsuo Hagita
-  cover: https://i.scdn.co/image/ab67616d0000b27339e8642aea2f091586324ac2
-  release_date: '1992-09-23'
-  total_tracks: 28
-- id: 0npwLeZafmr6tlmNxHaZMc
-  title: MOBILE SUIT GUNDAM THE 08th MS TEAM Original Motion Picture Soundtrack 1
-  artist: Kohei Tanaka
-  cover: https://i.scdn.co/image/ab67616d0000b2734c2dfa99d4ee58db03f0a7d8
-  release_date: '1996-06-21'
-  total_tracks: 10
 - id: 6gNyXr6nNjX0JVQd5VCUM6
   title: Neotokyo
   artist: Ed Harrison
@@ -748,6 +791,43 @@
   cover: https://i.scdn.co/image/ab67616d0000b273167672d9453d42b472e02137
   release_date: '2016-05-24'
   total_tracks: 21
+- id: 2rKA68eLinqdmduWEyExHt
+  title: Phantasy Star Online Original Soundtrack
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2730c3879f8ea0ee3da53151680
+  release_date: '2001-01-24'
+  total_tracks: 21
+- id: 5HOdHGs5a1XVjSjuadcMAv
+  title: PHANTASY STAR ONLINE2 Original Soundtracks (Vol. 1)
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273bb4fea50fe04007d41fbab37
+  release_date: '2013-10-30'
+  total_tracks: 35
+- id: 1g9Mgf7ONIcHBC1NJSmahv
+  title: PHANTASY STAR PORTABLE 2 ORIGINAL SOUND TRACK -WINGS OF UNIVERSE-
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2733c973bc85cd072320acd70c8
+  release_date: '2010-01-13'
+  total_tracks: 41
+- id: 3MW0SYHyXWW62HqhSw0rVi
+  title: Phantasy Star Series 25th Anniversary Concert ”Sympathy 2013” Live Memorial
+    Album
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273e5493b7c1790517f9b37593b
+  release_date: '2013-09-25'
+  total_tracks: 22
+- id: 0VZrFEro9T8pZKTCNsXfDJ
+  title: Phantasy Star Universe Ambition the Illuminus Original Soundtrack
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2736e329029f127d38712f38286
+  release_date: '2008-07-31'
+  total_tracks: 16
+- id: 6QJ6BzJJ3VM4NxBJB3M6sU
+  title: Phantasy Star Zero Original Sound Track
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b27331aac7d4aaeb4c8dc23b2f0a
+  release_date: '2009-01-28'
+  total_tracks: 95
 - id: 63W4cQKfF2HTjgRYZcQ0tU
   title: Quake
   artist: Nine Inch Nails
@@ -772,6 +852,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b2738effb3525dd4be986a60dc28
   release_date: '2016-09-01'
   total_tracks: 32
+- id: 45QAjMGmD5shFTAx0YX6jH
+  title: Save This World Phantasy Star Universe Original Score
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2730bbc2a876c290eb3fc119e62
+  release_date: '2006-09-13'
+  total_tracks: 14
 - id: 6bm2zfTwTBJ66rObupBJxS
   title: 'SHADOWBRINGERS: FINAL FANTASY XIV Original Soundtrack'
   artist: 祖堅 正慶
@@ -1115,6 +1201,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b27352c6b50c01025371a25105d0
   release_date: '2006-04-05'
   total_tracks: 79
+- id: 0HMKppHnFphltdEzp3Sz7K
+  title: 'YAKUZA 6: THE SONG OF LIFE ORIGINAL SOUNDTRACK'
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273c5ac4ae7c890c079e9891f6e
+  release_date: '2023-01-31'
+  total_tracks: 72
 - id: 1MMagb63SKV4iIDazvugO0
   title: 「GRAVITY DAZE/重力的眩暈:上層への帰還において、彼女の内宇宙に生じた摂動」 オリジナルサウンドトラック
   artist: SIE Sound Team
@@ -1127,6 +1219,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b273dec6e35b74fb9b5451238377
   release_date: '2023-03-01'
   total_tracks: 24
+- id: 7CeavIEZIjmiHZRGTWJyzl
+  title: 「龍が如く3」 オリジナルサウンドトラック
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2730eb5fd66fafec705edf59ea5
+  release_date: '2009-02-26'
+  total_tracks: 31
 - id: 1cKqMZHkWRw3a4TkzYLJhj
   title: 『ROBOTICS;NOTES DaSH』 オリジナル・サウンドトラック
   artist: 阿保剛
@@ -1205,3 +1303,21 @@
   cover: https://i.scdn.co/image/ab67616d0000b2734b90283c3ef0f0cda41d67cc
   release_date: '2013-09-25'
   total_tracks: 69
+- id: 2jJC6auMHxikdCswfLAJns
+  title: 龍が如く4 伝説を継ぐもの オリジナルサウンドトラック (Volume1)
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b273286b248260d96dc342b203c5
+  release_date: '2014-02-26'
+  total_tracks: 38
+- id: 0TFUPjHC7uubOXRNdCzOOp
+  title: 龍が如く4 伝説を継ぐもの オリジナルサウンドトラック (Volume2)
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2739cc8da9e16fe03d3d8817316
+  release_date: '2014-02-26'
+  total_tracks: 35
+- id: 72qIHJYwILg3vJDgAgcVYD
+  title: 龍が如く、龍が如く2 ORIGINAL SOUND TRACK
+  artist: SEGA SOUND TEAM
+  cover: https://i.scdn.co/image/ab67616d0000b2731b2c866e3d8bfe6c045bcae0
+  release_date: '2005'
+  total_tracks: 50
